--- a/invoice-printer/invoice.html
+++ b/invoice-printer/invoice.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>URL to PDF Converter</title>
     <style>
-        body {
+      a  body {
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
